src/objects/Storybank_Approved__c.object
<CustomObject>
    <fields>
        <fullName>Age_Range_formula__c</fullName>
        <formula>TEXT( Storyteller__r.Age_Range__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agree_to_Terms_of_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree to Terms of Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribution__c</fullName>
        <inlineHelpText>How submitter wants to be known...</inlineHelpText>
        <label>Pseudonym</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Category Chosen by Submitter</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing and Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobs/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please Specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_s_City__c</fullName>
        <formula>Storyteller__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_State__c</fullName>
        <formula>Storyteller__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Street__c</fullName>
        <formula>Storyteller__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Zip__c</fullName>
        <formula>Storyteller__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embed_URL__c</fullName>
        <label>Embed URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Final_Copy__c</fullName>
        <label>Final Copy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook/Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Internet Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Categories__c</fullName>
        <label>Internal Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Cutting Poverty in Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Good Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strengthening Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoting Economic Security</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Nominating_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominating Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Storybank - Approved</relationshipLabel>
        <relationshipName>Storybank_Approved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nominator_Notes__c</fullName>
        <label>Nominator Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Category__c</fullName>
        <label>Other Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Story_Summary__c</fullName>
        <inlineHelpText>Summarize story, especially for video</inlineHelpText>
        <label>Story Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Storybank_Name__c</fullName>
        <label>Storybank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storyteller_Disability__c</fullName>
        <description>Storyteller&apos;s Disability status based on the Storyteller Contact Lookup field</description>
        <formula>Storyteller__r.Disability__c</formula>
        <label>Storyteller Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storyteller_Email__c</fullName>
        <formula>Storyteller__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Storyteller Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storyteller_Ethnicity__c</fullName>
        <description>Storyteller&apos;s Ethnicity based on the Storyteller Contact Lookup field</description>
        <formula>TEXT( Storyteller__r.Ethnicity__c )</formula>
        <label>Storyteller Ethnicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storyteller_Gender__c</fullName>
        <description>Storyteller&apos;s Gender based on the Storyteller Contact Lookup field</description>
        <formula>TEXT( Storyteller__r.Gender__c )</formula>
        <label>Storyteller Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storyteller_Notes__c</fullName>
        <label>Storyteller Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storyteller_Phone__c</fullName>
        <formula>Storyteller__r.Phone</formula>
        <label>Storyteller Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storyteller_Sexual_Orientation__c</fullName>
        <description>Storyteller&apos;s Secual Orientation based on the Storyteller Contact Lookup field</description>
        <formula>TEXT( Storyteller__r.Sexual_Orientation__c )</formula>
        <label>Storyteller Sexual Orientation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storyteller_Veteran__c</fullName>
        <description>Storyteller&apos;s Veteran status based on the Storyteller Contact Lookup field</description>
        <formula>Storyteller__r.Veteran__c</formula>
        <label>Storyteller Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storyteller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Storyteller</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Storybank - Approved (Storyteller)</relationshipLabel>
        <relationshipName>Storyteller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Story__c</fullName>
        <inlineHelpText>Story submitted from web</inlineHelpText>
        <label>Submitted Story</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Storybank - Approved (Nominator)</relationshipLabel>
        <relationshipName>Nominator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Storybank Team&apos;s name to track source of the story. The value should originally be set by a workflow when the public form is submitted. It is copied to the Storybank record via the Field Set.</description>
        <label>Team</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <inlineHelpText>URL of Video being submitted</inlineHelpText>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video</label>
        <type>Checkbox</type>
    </fields>
    <label>Storybank - Approved</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Posted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Not_Posted_Stories</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Posted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Posted Stories</label>
    </listViews>
    <listViews>
        <fullName>Posted_Stories_12_Months</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Posted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_MONTHS:12</value>
        </filters>
        <label>Posted Stories - 12 Months</label>
    </listViews>
    <listViews>
        <fullName>Posted_Stories_6_Months</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Posted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>Posted Stories - 6 Months</label>
    </listViews>
    <listViews>
        <fullName>Posted_Stories_All_Time</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Posted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Posted Stories - All Time</label>
    </listViews>
    <listViews>
        <fullName>Posted_Stories_Text</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Posted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Storybank_Approved__c.Text_Submission</value>
        </filters>
        <label>Posted Stories - Text</label>
    </listViews>
    <listViews>
        <fullName>Posted_Stories_Video</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Posted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Storybank_Approved__c.Video_Submission</value>
        </filters>
        <label>Posted Stories - Video</label>
    </listViews>
    <listViews>
        <fullName>Stories_w_Nominators</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitter__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Stories w/ Nominators</label>
    </listViews>
    <listViews>
        <fullName>Stories_w_o_Nominators</fullName>
        <columns>NAME</columns>
        <columns>Storybank_Name__c</columns>
        <columns>Storyteller__c</columns>
        <columns>Submitter__c</columns>
        <columns>Category__c</columns>
        <columns>Video_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitter__c</field>
            <operation>equals</operation>
        </filters>
        <label>Stories w/o Nominators</label>
    </listViews>
    <nameField>
        <label>Approved Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storybank - Approved</pluralLabel>
    <recordTypes>
        <fullName>Text_Submission</fullName>
        <active>true</active>
        <description>For stories submitted as Text</description>
        <label>Text Submission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video_Submission</fullName>
        <active>true</active>
        <description>For stories submitted with link to Video</description>
        <label>Video Submission</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>